src/test/resources/parser/valid/divisionInt.sbsc
// Test division

println(str(4 / 2));