src/test/resources/parser/invalid/cast/badIntCast.sbsc
// parser should error at invalid cast

println(int(2));

return false;